# yoo-ofsm

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac  yooofsmlib.pc.in
arrays/: fsm5.c
examples/: Makefile.am
examples/poker/: Makefile.am  build.c  deck-36.c  deck-52.c  main.c  opencl.c  poker.c
include/: Makefile.am  fsm.h  ofsm.h  poker.h  yoo-ofsm.h
m4/: enable-debug.m4  opencl-amd.m4  with-valgrind.m4
ofsm/: six-plus-5.bin.tar.bz2  six-plus-7.bin.tar.bz2  texas-5.bin.tar.bz2
releases/: yoo-ofsm-0.31.tar.bz2
source/: Makefile.am  build.c  common.c  deck-36.c  deck-52.c  main.c  opencl.c  poker.c  utils.c  verify.c
validation/: Makefile.am  outsider.c  validation.sh.in
